--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ task hdp22Rpm(type: Rpm) {
 	packageName = 'scdf-plugin-hdp'
 	classifier = 'rpm'
 	group = 'foo'
+	version = '1.0'
 	from('src/main/resources/services') {
 		into '/var/lib/ambari-server/resources/stacks/HDP/2.2/services'
 	}
