--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,10 @@ apply plugin: 'rpm'
 
 buildDeb.enabled = false
 //buildRpm.enabled = false
-group = 'foo'
-version = '1.0'
-//name = 'bar'
+group = 'scdf'
 
 ospackage {
-	version = '1.0'
+//	version = '1.0'
 	release = 1
 	arch = NOARCH
 	os = LINUX
@@ -55,9 +53,6 @@ ospackage {
 
 buildRpm {
 	packageName = 'scdf-plugin-hdp'
-//	classifier = 'rpm'
-	group = 'foo'
-	version = '1.0'
 	from('src/main/resources/services') {
 		into '/var/lib/ambari-server/resources/stacks/HDP/2.2/services'
 	}
