--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ configure(subprojects) { subproject ->
 }
 
 project('hdp') {
+	classifier = `1`
 	buildRpm {
 		packageName = 'scdf-plugin-hdp'
 		from("${rootProject.projectDir}/src/main/resources/services") {
@@ -46,6 +47,7 @@ project('hdp') {
 }
 
 project('phd') {
+	classifier = `1`
 	buildRpm {
 		packageName = 'scdf-plugin-phd'
 		from("${rootProject.projectDir}/src/main/resources/services") {
