--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ configure(subprojects) { subproject ->
 
 	publishing {
 		publications {
-			archive(IvyPublication) {
+			archives(IvyPublication) {
 				descriptor.withXml {
 					asNode().info[0].attributes().put('e:architecture', 'amd64')
 				}
