--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ configure(subprojects) { subproject ->
 
 project('hdp') {
 	println 'XXX1'
-	println tasks.findByPath("artifactoryPublish")
+	println tasks.findByPath("artifactoryPublish")?.properties
 	println 'XXX2'
 	buildRpm {
 		packageName = 'scdf-plugin-hdp'
