--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 
 	dependencies {
 		classpath 'com.netflix.nebula:gradle-ospackage-plugin:2.2.6'
+		classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.0.0"
 	}
 }
 
@@ -15,6 +16,7 @@ configure(allprojects) {
 configure(subprojects) { subproject ->
 	apply plugin: 'os-package'
 	apply plugin: 'rpm'
+	apply plugin: "com.jfrog.artifactory"
 	buildDeb.enabled = false
 
 	ospackage {
@@ -39,8 +41,14 @@ configure(subprojects) { subproject ->
 
 project('hdp') {
 	println 'XXX1'
-	println tasks.findByPath("artifactoryPublish")?.getProperties()
-	println 'XXX2'
+	if (tasks.findByPath("artifactoryPublish")) {
+		artifactoryPublish {
+		println 'XXX2'
+			properties = ['qa.level': 'basic', 'q.os': 'win32, deb, osx']
+		}
+	}
+//	println tasks.findByPath("artifactoryPublish")?.getProperties()
+	println 'XXX3'
 	buildRpm {
 		packageName = 'scdf-plugin-hdp'
 		from("${rootProject.projectDir}/src/main/resources/services") {
