--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ if (tasks.findByPath("artifactoryPublish")) {
 		publish {
 			repository {
 				ivy {
-					artifactLayout = '[organization]/[revision]/[organization]-plugin-[module]-[revision]-1.noarch.[ext]'
+					artifactLayout = '[organization]/[revision]/[organization]-plugin-[module]-[revision]-1.[architecture].[ext]'
 				}
 			}
 		}
@@ -26,6 +26,7 @@ configure(allprojects) {
 
 configure(subprojects) { subproject ->
 	apply plugin: 'nebula.ospackage'
+	apply plugin: 'ivy-publish'
 	buildDeb.enabled = false
 
 	ospackage {
@@ -45,6 +46,18 @@ configure(subprojects) { subproject ->
 
 	artifacts {
 		archives buildRpm
+	}
+
+	if (tasks.findByPath("artifactoryPublish")) {
+		publishing {
+			publications {
+				archives(IvyPublication) {
+					descriptor.withXml {
+						asNode().info[0].attributes().put('e:architecture', 'amd64')
+					}
+				}
+			}
+		}
 	}
 }
 
